# TetrisGameInConsole

./: .build_tools.swp  CMakeLists.txt  CMakeListsX.txt  DockerfileBuildEnv  Makefile  README.md  main.cpp
TetrisConsole/: Battleships.cpp  CMakeLists.txt  Canvas.cpp  Config.cpp  Figure.cpp  FigureCoordinates.cpp  FigureCoordinates.h  Figure_I.cpp  Figure_L.cpp  Figure_O.cpp  Figure_O.h  Figure_T.cpp  Game.cpp  GameSystem.cpp  Point.cpp  Tetris.cpp  main.cpp
TetrisConsole/Config/: Config.cpp
TetrisConsole/FigureClasses/: Figure.cpp  Figure_I.cpp  Figure_L.cpp  Figure_O.cpp  Figure_T.cpp
TetrisConsole/include/: Battleships.h  Canvas.h  Config.h  Figure.h  Figure_I.h  Figure_L.h  Figure_O.h  Figure_T.h  Game.h  GameSystem.h  LevelPolicy.h  Point.h  Tetris.h
TetrisConsole/include/Components/: Canvas.h  FigureCoordinates.h
TetrisConsole/include/Figures/: Figure.h  Figure_I.h  Figure_O.h
TetrisConsole/include/Games/: Battleships.h  Tetris.h
TetrisConsole/include/TetrisLevel/: TetrisLevelEasy.h  TetrisLevelHard.h  TetrisLevelMedium.h
include/: Tetris.h
src/: Tetris.cpp
